--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
 
         <div id="photo-popup-1" class="popup">
-            <img src="images/mp3.png" alt="PM Photo 1">
+            <img src="mp3.png" alt="PM Photo 1">
             <p class="message">"Wishing you a fantastic adlaw, Sir Billmor! Birthdaaaayy mo na ngayon!🎵."</p>
             <button class="next-btn">NEXT</button>
         </div>
@@ -35,7 +35,7 @@
         <div id="video-popup" class="popup">
             <h2>From M'Aimee Cellon</h2>     
             <video id="SHARED-video" controls autoplay muted width="320" height="240">
-                <source src="videos/MP4maimee.mp4" type="video/mp4">
+                <source src="MP4maimee.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <button class="next-btn">NEXT PLS!</button>
@@ -52,7 +52,7 @@
          <div id="video-popup" class="popup">
             <h2>From M'Shinny Sacala</h2>  
             <video id="SHARED-video" controls autoplay muted width="320" height="240">
-                <source src="videos/MP4MSHINNY.mp4" type="video/mp4">
+                <source src="MP4MSHINNY.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <button class="next-btn">NEXT PLS!</button>
@@ -69,14 +69,14 @@
          </div>
 
          <div id="photo-popup-2" class="popup">
-            <img src="images/sbill.png" alt="S'Bill">
+            <img src="sbill.png" alt="S'Bill">
             <p class="message">"Thanks for always answering my not so articulated and not braining questions- "nag iisip ka ba? hahahah okay Sir, Nice ka 💔😂! HBD S'Bill! -Harvey"</p>
             <button class="next-btn">TENKYU NEXT</button>
         </div>
 
    <div id="gif-popup" class="popup">
             <h2>Birthday Mo: Sequel ng kay Rizal!🎉🥳</h2>
-            <img src="images/gifgif.gif" alt="SWITCHING CELEB">
+            <img src="gifgif.gif" alt="SWITCHING CELEB">
             <p class="message">TO NATIONAL HERO BDAY TO CORP HERO (char) BDAY! Wait mo lang Sir, GIF ito HAHA</p>
             <button class="next-btn">NEXT</button>
         </div>
@@ -84,14 +84,14 @@
         <div id="video-popup" class="popup">
             <p class="message">MIGHT BE ME IF WALA KA GA REMIND NA TAKE YOUR TIME HAHAHA---Ito talaga gusto ko ipaabot Sir, na mensahe! skl, funny kasi sir hahaha 😂</p>
             <video id="SHARED-video" controls autoplay muted width="320" height="240">
-                <source src="videos/meme.mp4" type="video/mp4">
+                <source src="meme.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <button class="next-btn">Another Message</button>
          </div>
 
           <div id="photo-popup-1" class="popup">
-            <img src="images/Untitled design.png" alt="with S'Chato">
+            <img src="Untitled design.png" alt="with S'Chato">
             <p class="message"> "Happy Birthday Sir Billmor" - Francis</p>
             <button class="next-btn">FORDA-GO!</button>
          </div>
@@ -105,7 +105,7 @@
          </div>
 
          <div id="photo-popup-1" class="popup">
-            <img src="images/SUISE.jpg" alt="with suise">
+            <img src="SUISE.jpg" alt="with suise">
             <p class="message"> Boss! bossing! naks umabot pa sa bday oh. happy birthday! 
                 Sana humaba pa ang bohai mo, ride safe lagi. NEEEEEVERRR MAG EARLY OUT!!!</p>
             <button class="next-btn">NEXT SHAREABLES</button>
@@ -114,12 +114,12 @@
          <div id="photo-popup-1" class="popup">
             <p class="message"> Whenever I see post like this po, 
             I am reminded of you and Maam Angyl. Thank you po!</p>
-            <img src="images/wholesome.png" alt="GRATEFULNESS">
+            <img src="wholesome.png" alt="GRATEFULNESS">
             <button class="next-btn">One More Click!</button>
          </div>
 
          <div id="photo-popup-1" class="popup">
-            <img src="images/ang nakaraan.jpg" alt="college days">
+            <img src="ang nakaraan.jpg" alt="college days">
             <p class="message"> Your younger self is proud of you, IG?!</p>
             <button class="next-btn">One More Click!</button>
          </div>
