--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
          <div id="photo-popup-2" class="popup">
             <img src="images/sbill.png" alt="S'Bill">
-            <p class="message">"Thanks for always answering my not so articulated and not braining questions- "nag iisip ka ba? hahahah okay Sir, Nice ka 💔😂! HBD S'Bill! -Harvey"</p>
+            <p class="message">"Thanks for always answering my not so articulated and not braining questions- "nag iisip ka ba?" hahahah okay Sir, Nice ka 💔😂! HBD S'Bill! -Harvey"</p>
             <button class="next-btn">TENKYU NEXT</button>
         </div>
 
@@ -82,7 +82,7 @@
         </div>
         
         <div id="video-popup" class="popup">
-            <p class="message">MIGHT BE ME IF WALA KA GA REMIND NA TAKE YOUR TIME HAHAHA---Ito talaga gusto ko ipaabot Sir, na mensahe! skl, funny kasi sir hahaha 😂</p>
+            <p class="message">MIGHT BE ME, IF WALA KA GA REMIND NA TAKE YOUR TIME HAHAHA---Ito talaga gusto ko ipaabot Sir, na mensahe! skl, funny kasi sir hahaha 😂</p>
             <video id="SHARED-video" controls autoplay muted width="320" height="240">
                 <source src="videos/meme.mp4" type="video/mp4">
                 Your browser does not support the video tag.
